# freq_beamsplitter

./: .gitignore  README.md  pyproject.toml
examples/: demo.py  fidelity_vs_intrinsic_loss.py  haar_inverse_design.py  matrix_visualisation_one_ring.py
freq_beamsplitter/: __init__.py  core.py  embed_unitary.py  optimise.py  visualise.py
